@startuml class
class event
class event_report
class event_schedule
class exhibit_information
class exhibit_information_place
class exhibit_submission
class exhibitor
class floor
class place_block
class sponsor
class sponsorship

event "1" -- "1..*" event_schedule
event "1" -- "0..*" event_report
event "1" -- "0..*" exhibit_information
event_schedule "1" -- "0..*" floor
floor "1" -- "0..*" place_block
exhibit_information "1" -- "1" exhibit_submission
exhibitor "1" -- "0..*" exhibit_information
event "1" -- "0..*" sponsorship
sponsorship "0..*" -- "1" sponsor
place_block "1" -- "0..*" exhibit_information_place
exhibit_information "1" -- "0..*" exhibit_information_place
@enduml